# fandas

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  distance_calculator.py  environment.yml  fandas.py  pyproject.toml  requirements.txt  setup.py  test_dataset.tar
.github/workflows/: lint.yml  publish.yml  unittests.yml
.trunk/: trunk.yaml
debug/: hn_exp.txt  nh_exp.txt
example/: 1ubq-bmrb-tables.txt  1ubq-cc-dist.txt  1ubq-hh-dist.txt  1ubq-seq.txt  1ubq.ss  input.toml
src/fandas/: catalog.toml  cli.py  version.py
src/fandas/data/: catalog.toml  standard.csv
src/fandas/modules/: bmrb.py  chemical.py  chemical_shift.py  experiment.py  experiments.py  input.py  residue.py  utils.py
tests/: __init__.py  test_cli.py
tests/data/: test_bmrm.str  test_bmrm_table.csv  test_distance.txt  test_input.toml
tests/modules/: test_bmrb.py  test_chemical.py  test_chemical_shift.py  test_experiment.py  test_input.py  test_residue.py  test_utils.py
