[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FANDAS"
version = "2.3.0"
description = "Fast Analysis of multidimensional NMR DAta Sets"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Siddarth Narasimhan" }]
maintainers = [
  { name = "Rodrigo V. Honorato", email = "bonvinlab.support@uu.nl" },
]
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",

]
requires-python = ">3.9, <3.14"
dependencies = ["numpy>=2.2.3", "pandas>=2.2.2", "toml>=0.10"]

[project.optional-dependencies]
dev = ["coverage", "pytest", "pytest-cov", "hypothesis"]

[project.scripts]
fandas = "fandas.cli:maincli"
